--- a/personal-site/src/Searchbar.css
+++ b/personal-site/src/Searchbar.css
@@ -1,7 +1,7 @@
-.logo {
+/* .logo {
   margin-top: 200px;
   margin-bottom: 20px;
-}
+} */
 .bar {
   margin: 0 auto;
   width: 575px;
@@ -20,7 +20,9 @@
   border: none;
   width: 500px;
   font-size: 16px;
+  border-radius: 30px;
   outline: none;
+  text-indent: 10px;
 }
 .voice {
   height: 20px;
@@ -28,7 +30,7 @@
   top: 5px;
   left: 10px;
 }
-.article .container {
+.sBar .container {
   display: flex;
   flex-direction: column;
   justify-content: center;
